@@ -210,6 +210,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - XBasic                 José Gabriel Moya Yangüela
 - Xorg config            Milian Wolff
 - Z80 Assembler          Benny Baumann
+- ZXBasic                Jose Rodriguez
 
 Do you want your name in here? Help me out! Make a language file, or suggest a new
 feature, or make a plugin for GeSHi for some other software, then tell me about it!
